Added plural search strings to linking and updated some html files

--- a/campaign/creatures/animals/index.html
+++ b/campaign/creatures/animals/index.html
@@ -50,6 +50,96 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Oasis_Dweller.html">
+      Oasis Dweller
+     </a>
+    </li>
+    <li>
+     <a href="Sandstrider.html">
+      Sandstrider
+     </a>
+    </li>
+    <li>
+     <a href="Sandwhisperer.html">
+      Sandwhisperer
+     </a>
+    </li>
+    <li>
+     <a href="Sunfire_Serpent.html">
+      Sunfire Serpent
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/oasis_dwellers (1).jpg">
+      img/oasis_dwellers (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/oasis_dwellers (2).jpg">
+      img/oasis_dwellers (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/oasis_dwellers (3).jpg">
+      img/oasis_dwellers (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/oasis_dwellers (4).jpg">
+      img/oasis_dwellers (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sand_whisperers (1).jpg">
+      img/sand_whisperers (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sand_whisperers (2).jpg">
+      img/sand_whisperers (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sand_whisperers (3).jpg">
+      img/sand_whisperers (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sandstriders (1).jpg">
+      img/sandstriders (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sandstriders (2).jpg">
+      img/sandstriders (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sandstriders (3).jpg">
+      img/sandstriders (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sandstriders (4).jpg">
+      img/sandstriders (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sunfire_serpents (1).jpg">
+      img/sunfire_serpents (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sunfire_serpents (2).jpg">
+      img/sunfire_serpents (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sunfire_serpents (3).jpg">
+      img/sunfire_serpents (3).jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
