--- a/campaign/items/consumables/herbs/img/index.html
+++ b/campaign/items/consumables/herbs/img/index.html
@@ -71,6 +71,41 @@
      </a>
     </li>
     <li>
+     <a href="frostbloom (1).jpg">
+      frostbloom (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="frostbloom (2).jpg">
+      frostbloom (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="frostbloom (3).jpg">
+      frostbloom (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="frostbloom (4).jpg">
+      frostbloom (4).jpg
+     </a>
+    </li>
+    <li>
+     <a href="mirage_cacti (1).jpg">
+      mirage cacti (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="mirage_cacti (2).jpg">
+      mirage cacti (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="mirage_cacti (3).jpg">
+      mirage cacti (3).jpg
+     </a>
+    </li>
+    <li>
      <a href="sand_blossom (1).jpg">
       sand blossom (1).jpg
      </a>
@@ -88,6 +123,86 @@
     <li>
      <a href="sand_blossom (4).jpg">
       sand blossom (4).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sand_dune_lily (1).jpg">
+      sand dune lily (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sand_dune_lily (2).jpg">
+      sand dune lily (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sand_dune_lily (3).jpg">
+      sand dune lily (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sand_dune_lily (4).jpg">
+      sand dune lily (4).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sunfire_cactus (1).jpg">
+      sunfire cactus (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sunfire_cactus (2).jpg">
+      sunfire cactus (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sunfire_cactus (3).jpg">
+      sunfire cactus (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="sunfire_cactus (4).jpg">
+      sunfire cactus (4).jpg
+     </a>
+    </li>
+    <li>
+     <a href="twilight_vine (1).jpg">
+      twilight vine (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="twilight_vine (2).jpg">
+      twilight vine (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="twilight_vine (3).jpg">
+      twilight vine (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="twilight_vine_berries (1).jpg">
+      twilight vine berries (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="twilight_vine_berries (2).jpg">
+      twilight vine berries (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="twilight_vine_berries (3).jpg">
+      twilight vine berries (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="twilight_vine_berries (4).jpg">
+      twilight vine berries (4).jpg
+     </a>
+    </li>
+    <li>
+     <a href="twilight_vine_berries (5).jpg">
+      twilight vine berries (5).jpg
      </a>
     </li>
    </ul>
