--- a/campaign/items/consumables/herbs/index.html
+++ b/campaign/items/consumables/herbs/index.html
@@ -56,8 +56,33 @@
      </a>
     </li>
     <li>
+     <a href="Frostbloom.html">
+      Frostbloom
+     </a>
+    </li>
+    <li>
+     <a href="Mirage_Cacti.html">
+      Mirage Cacti
+     </a>
+    </li>
+    <li>
      <a href="Sand_Blossom.html">
       Sand Blossom
+     </a>
+    </li>
+    <li>
+     <a href="Sand_Dune_Lily.html">
+      Sand Dune Lily
+     </a>
+    </li>
+    <li>
+     <a href="Sunfire_Cactus.html">
+      Sunfire Cactus
+     </a>
+    </li>
+    <li>
+     <a href="Twilight_Vine.html">
+      Twilight Vine
      </a>
     </li>
     <li>
@@ -81,6 +106,41 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/frostbloom (1).jpg">
+      img/frostbloom (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/frostbloom (2).jpg">
+      img/frostbloom (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/frostbloom (3).jpg">
+      img/frostbloom (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/frostbloom (4).jpg">
+      img/frostbloom (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/mirage_cacti (1).jpg">
+      img/mirage_cacti (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/mirage_cacti (2).jpg">
+      img/mirage_cacti (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/mirage_cacti (3).jpg">
+      img/mirage_cacti (3).jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/sand_blossom (1).jpg">
       img/sand_blossom (1).jpg
      </a>
@@ -98,6 +158,86 @@
     <li>
      <a class="image-index-link" href="img/sand_blossom (4).jpg">
       img/sand_blossom (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sand_dune_lily (1).jpg">
+      img/sand_dune_lily (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sand_dune_lily (2).jpg">
+      img/sand_dune_lily (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sand_dune_lily (3).jpg">
+      img/sand_dune_lily (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sand_dune_lily (4).jpg">
+      img/sand_dune_lily (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sunfire_cactus (1).jpg">
+      img/sunfire_cactus (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sunfire_cactus (2).jpg">
+      img/sunfire_cactus (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sunfire_cactus (3).jpg">
+      img/sunfire_cactus (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/sunfire_cactus (4).jpg">
+      img/sunfire_cactus (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/twilight_vine (1).jpg">
+      img/twilight_vine (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/twilight_vine (2).jpg">
+      img/twilight_vine (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/twilight_vine (3).jpg">
+      img/twilight_vine (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/twilight_vine_berries (1).jpg">
+      img/twilight_vine_berries (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/twilight_vine_berries (2).jpg">
+      img/twilight_vine_berries (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/twilight_vine_berries (3).jpg">
+      img/twilight_vine_berries (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/twilight_vine_berries (4).jpg">
+      img/twilight_vine_berries (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/twilight_vine_berries (5).jpg">
+      img/twilight_vine_berries (5).jpg
      </a>
     </li>
    </ul>
