--- a/campaign/locations/regions/Matella/Eldara/Eldara.html
+++ b/campaign/locations/regions/Matella/Eldara/Eldara.html
@@ -316,34 +316,81 @@
     <a href="../../../../items/consumables/herbs/Desert_Sage.html">
      Desert Sage
     </a>
-    to the elusive twilight vine, these plants showcase exceptional adaptations to survive in this challenging environment. Embark on a journey through the botanical tapestry of Eldara, where vibrant colors, subtle fragrances, and astonishing resilience converge in a fascinating display of nature's ingenuity. Unveil the hidden wonders that lie beneath the desert surface and explore the remarkable diversity of Eldara's plant life. Here are some unique plants found throughout Eldara, including those specific to the northern areas along the bordering mountains:
+    to the elusive
+    <a href="../../../../items/consumables/herbs/Twilight_Vine.html">
+     Twilight Vine</a>, these plants showcase exceptional adaptations to survive in this challenging environment. Embark on a journey through the botanical tapestry of Eldara, where vibrant colors, subtle fragrances, and astonishing resilience converge in a fascinating display of nature's ingenuity. Unveil the hidden wonders that lie beneath the desert surface and explore the remarkable diversity of Eldara's plant life. Here are some unique plants found throughout Eldara, including those specific to the northern areas along the bordering mountains:
    </p>
    <p>
     <ul>
      <li>
-      Desert Sage (Salvus aureus): A hardy plant with silvergray leaves and small purple flowers. It thrives in the arid climate of Eldara and is known for its medicinal properties, used by the locals for healing and purification rituals.
+      <a href="../../../../items/consumables/herbs/Desert_Sage.html">
+       Desert Sage
+      </a>
+      (Salvus aureus): A hardy plant with silvergray leaves and small purple flowers. It thrives in the arid climate of Eldara and is known for its medicinal properties, used by the locals for healing and purification rituals.
      </li>
      <li>
-      Sand Blossom (Flora auris): This rare and beautiful flower blooms only during the cool nights of Eldara's desert. Its petals are a vibrant shade of magenta, contrasting against the sandy landscape. The
+      <a href="../../../../items/consumables/herbs/Sand_Blossom.html">
+       Sand Blossom
+      </a>
+      (Flora auris): This rare and beautiful flower blooms only during the cool nights of Eldara's desert. Its petals are a vibrant shade of magenta, contrasting against the sandy landscape. The
       <a href="../../../../items/consumables/herbs/Sand_Blossom.html">
        Sand Blossom
       </a>
       releases a sweet fragrance that attracts nocturnal insects.
      </li>
      <li>
-      Sunfire Cactus (Solarii cactacea): Found in the northern regions near the bordering mountains, the Sunfire Cactus is a towering cactus species with golden spines that reflect sunlight, giving it a fiery appearance. It stores water within its fleshy stems and produces vibrant red flowers during the brief rainy season.
+      <a href="../../../../items/consumables/herbs/Sunfire_Cactus.html">
+       Sunfire Cactus
+      </a>
+      (Solarii cactacea): Found in the northern regions near the bordering mountains, the
+      <a href="../../../../items/consumables/herbs/Sunfire_Cactus.html">
+       Sunfire Cactus
+      </a>
+      is a towering cactus species with golden spines that reflect sunlight, giving it a fiery appearance. It stores water within its fleshy stems and produces vibrant red flowers during the brief rainy season.
      </li>
      <li>
-      Twilight Vine (Vitis crepusculum): Growing along the foothills of the bordering mountains, the Twilight Vine is a climbing plant that thrives in the cooler and more shaded areas of Eldara. Its deep purple berries are edible and highly sought after for their unique sweet and tart flavor.
+      <a href="../../../../items/consumables/herbs/Twilight_Vine.html">
+       Twilight Vine
+      </a>
+      (Vitis crepusculum): Growing along the foothills of the bordering mountains, the
+      <a href="../../../../items/consumables/herbs/Twilight_Vine.html">
+       Twilight Vine
+      </a>
+      is a climbing plant that thrives in the cooler and more shaded areas of Eldara. Its deep purple berries are edible and highly sought after for their unique sweet and tart flavor.
      </li>
      <li>
-      Sand Dune Lily (Lilium arenaceus): Resilient and adapted to the shifting sands of Eldara's dunes, the Sand Dune Lily is a delicate flower that blooms in hues of pale yellow and cream. Its slender stems and petals sway with the desert winds, creating a mesmerizing sight.
+      <a href="../../../../items/consumables/herbs/Sand_Dune_Lily.html">
+       Sand Dune Lily
+      </a>
+      (Lilium arenaceus): Resilient and adapted to the shifting sands of Eldara's dunes, the
+      <a href="../../../../items/consumables/herbs/Sand_Dune_Lily.html">
+       Sand Dune Lily
+      </a>
+      is a delicate flower that blooms in hues of pale yellow and cream. Its slender stems and petals sway with the desert winds, creating a mesmerizing sight.
      </li>
      <li>
-      Frostbloom (Frigoris floreus): Exclusive to the northern regions where the mountains cast a shadow, the Frostbloom is a small, white flower that appears during the colder months. It manages to survive the low temperatures by producing antifreezelike compounds in its petals.
+      <a href="../../../../items/consumables/herbs/Frostbloom.html">
+       Frostbloom
+      </a>
+      (Frigoris floreus): Exclusive to the northern regions where the mountains cast a shadow, the
+      <a href="../../../../items/consumables/herbs/Frostbloom.html">
+       Frostbloom
+      </a>
+      is a small, white flower that appears during the colder months. It manages to survive the low temperatures by producing antifreezelike compounds in its petals.
      </li>
      <li>
-      Mirage Cacti: Found scattered across the desert sands of Eldara, Mirage Cacti are peculiar and elusive plants that play tricks on the eyes of unsuspecting travelers. These cacti have evolved the ability to create miragelike illusions, distorting perception and confusing those who venture too close. They blend seamlessly with the arid landscape, their spiny exteriors camouflaged among the other desert flora. Mirage Cacti serve as a reminder of the deceptive nature of the desert and the need for caution and sharp senses in Eldara.
+      <a href="../../../../items/consumables/herbs/Mirage_Cacti.html">
+       Mirage Cacti
+      </a>
+      : Found scattered across the desert sands of Eldara,
+      <a href="../../../../items/consumables/herbs/Mirage_Cacti.html">
+       Mirage Cacti
+      </a>
+      are peculiar and elusive plants that play tricks on the eyes of unsuspecting travelers. These cacti have evolved the ability to create miragelike illusions, distorting perception and confusing those who venture too close. They blend seamlessly with the arid landscape, their spiny exteriors camouflaged among the other desert flora.
+      <a href="../../../../items/consumables/herbs/Mirage_Cacti.html">
+       Mirage Cacti
+      </a>
+      serve as a reminder of the deceptive nature of the desert and the need for caution and sharp senses in Eldara.
      </li>
     </ul>
    </p>
@@ -357,21 +404,63 @@
     Enigmatic Creatures of Eldara: Unveiling the Desert's Biodiversity
    </h3>
    <p class="first-paragraph">
-    The realm of Eldara harbors a wealth of intriguing and exceptional creatures that have adapted to the formidable challenges posed by its arid and unforgiving desert terrain. Within this vast expanse of sun-scorched dunes and parched plains, a diverse array of unique beings flourishes, each a testament to the remarkable resilience and ingenuity of life in the desert. From the towering Sandstriders to the radiant Sunfire Serpents and the elusive Mirage Cacti, Eldara's creatures captivate with their adaptations and enigmatic nature. In this section, we delve into the rich tapestry of Eldara's biodiversity, shedding light on some of the most captivating inhabitants that call this desert realm their home. Join us on an exploration of the secrets and wonders that lie within the shifting sands of Eldara as we unveil the remarkable fauna that thrives in this extraordinary desert landscape.
+    The realm of Eldara harbors a wealth of intriguing and exceptional creatures that have adapted to the formidable challenges posed by its arid and unforgiving desert terrain. Within this vast expanse of sun-scorched dunes and parched plains, a diverse array of unique beings flourishes, each a testament to the remarkable resilience and ingenuity of life in the desert. From the towering
+    <a href="../../../../creatures/animals/Sandstrider.html">
+     Sandstrider
+    </a>
+    to the radiant
+    <a href="../../../../creatures/animals/Sunfire_Serpent.html">
+     Sunfire Serpent
+    </a>
+    and the elusive
+    <a href="../../../../items/consumables/herbs/Mirage_Cacti.html">
+     Mirage Cacti</a>, Eldara's creatures captivate with their adaptations and enigmatic nature. In this section, we delve into the rich tapestry of Eldara's biodiversity, shedding light on some of the most captivating inhabitants that call this desert realm their home. Join us on an exploration of the secrets and wonders that lie within the shifting sands of Eldara as we unveil the remarkable fauna that thrives in this extraordinary desert landscape.
    </p>
    <p>
     <ul>
      <li>
-      Sandstriders: These towering creatures are welladapted to the desert environment of Eldara. Sandstriders are enormous, arachnidlike beings with elongated limbs and a tough exoskeleton that blends seamlessly with the sandy dunes. They navigate effortlessly across the shifting sands, using their powerful legs to traverse the desert landscape in search of prey. With sharp mandibles and a keen sense of vibration, they can detect hidden creatures beneath the sand, making them skilled hunters in the arid plains of Eldara.
+      <a href="../../../../creatures/animals/Sandstrider.html">
+       Sandstrider
+      </a>
+      : These towering creatures are welladapted to the desert environment of Eldara.
+      <a href="../../../../creatures/animals/Sandstrider.html">
+       Sandstrider
+      </a>
+      are enormous, arachnidlike beings with elongated limbs and a tough exoskeleton that blends seamlessly with the sandy dunes. They navigate effortlessly across the shifting sands, using their powerful legs to traverse the desert landscape in search of prey. With sharp mandibles and a keen sense of vibration, they can detect hidden creatures beneath the sand, making them skilled hunters in the arid plains of Eldara.
      </li>
      <li>
-      Sunfire Serpents: Gliding through the scorching air of Eldara, Sunfire Serpents are radiant and aweinspiring creatures. They possess iridescent scales that shimmer with vibrant hues of orange, yellow, and gold, mirroring the intense desert sun. These serpents are known for their ability to harness solar energy, absorbing sunlight to sustain themselves in the arid climate. It is said that their mere presence can bring warmth and light to the darkest corners of the desert, making them symbols of hope and resilience.
+      <a href="../../../../creatures/animals/Sunfire_Serpent.html">
+       Sunfire Serpent
+      </a>
+      : Gliding through the scorching air of Eldara,
+      <a href="../../../../creatures/animals/Sunfire_Serpent.html">
+       Sunfire Serpent
+      </a>
+      are radiant and aweinspiring creatures. They possess iridescent scales that shimmer with vibrant hues of orange, yellow, and gold, mirroring the intense desert sun. These serpents are known for their ability to harness solar energy, absorbing sunlight to sustain themselves in the arid climate. It is said that their mere presence can bring warmth and light to the darkest corners of the desert, making them symbols of hope and resilience.
      </li>
      <li>
-      Sandwhisperers: These diminutive creatures are often mistaken for desert mirages or gentle breezes stirring the sand. Sandwhisperers are ethereal beings, barely visible to the naked eye, as they shimmer and blend seamlessly with their sandy surroundings. They are guardians of Eldara's secrets, possessing an intimate connection with the desert. Legends speak of their ability to communicate with the wind and manipulate sandstorms, using their powers to protect the delicate balance of the desert ecosystem.
+      <a href="../../../../creatures/animals/Sandwhisperer.html">
+       Sandwhisperer
+      </a>
+      : These diminutive creatures are often mistaken for desert mirages or gentle breezes stirring the sand.
+      <a href="../../../../creatures/animals/Sandwhisperer.html">
+       Sandwhisperer
+      </a>
+      are ethereal beings, barely visible to the naked eye, as they shimmer and blend seamlessly with their sandy surroundings. They are guardians of Eldara's secrets, possessing an intimate connection with the desert. Legends speak of their ability to communicate with the wind and manipulate sandstorms, using their powers to protect the delicate balance of the desert ecosystem.
      </li>
      <li>
-      Oasis Dwellers: Nestled in hidden oases scattered throughout Eldara, the Oasis Dwellers are amphibious creatures with a peculiar blend of aquatic and desert adaptations. They have evolved to survive in the desert's extreme conditions, with translucent, waterretaining skin and webbed appendages for efficient swimming. Oasis Dwellers rely on the precious freshwater sources found within the oases, and they guard these sanctuaries fiercely. Their presence brings life and vitality to the arid landscape, serving as a symbol of resilience and the hidden beauty that can be found even in the harshest environments.
+      <a href="../../../../creatures/animals/Oasis_Dweller.html">
+       Oasis Dweller
+      </a>
+      : Nestled in hidden oases scattered throughout Eldara, the
+      <a href="../../../../creatures/animals/Oasis_Dweller.html">
+       Oasis Dweller
+      </a>
+      are amphibious creatures with a peculiar blend of aquatic and desert adaptations. They have evolved to survive in the desert's extreme conditions, with translucent, waterretaining skin and webbed appendages for efficient swimming.
+      <a href="../../../../creatures/animals/Oasis_Dweller.html">
+       Oasis Dweller
+      </a>
+      rely on the precious freshwater sources found within the oases, and they guard these sanctuaries fiercely. Their presence brings life and vitality to the arid landscape, serving as a symbol of resilience and the hidden beauty that can be found even in the harshest environments.
      </li>
     </ul>
    </p>
@@ -384,7 +473,9 @@
    <p>
     <ul>
      <li>
-      Sifariato Mountains
+      <a href="Sifariato_Mountains.html">
+       Sifariato Mountains
+      </a>
      </li>
      <li>
       Lessercrest Mountains
