--- a/campaign/locations/regions/Matella/Matella.html
+++ b/campaign/locations/regions/Matella/Matella.html
@@ -284,46 +284,74 @@
    <p>
     <ul>
      <li>
-      Alderpine
+      <a href="Alderpine/Alderpine.html">
+       Alderpine
+      </a>
      </li>
      <li>
-      Aldor Sovereign
+      <a href="Aldor_Sovereign/Aldor_Sovereign.html">
+       Aldor Sovereign
+      </a>
      </li>
      <li>
-      The Ashenlands
+      <a href="The_Ashenlands/The_Ashenlands.html">
+       The Ashenlands
+      </a>
      </li>
      <li>
-      Bakaria
+      <a href="Bakaria/Bakaria.html">
+       Bakaria
+      </a>
      </li>
      <li>
-      Daystone Isle
+      <a href="Daystone_Isle/Daystone_Isle.html">
+       Daystone Isle
+      </a>
      </li>
      <li>
-      Eldara
+      <a href="Eldara/Eldara.html">
+       Eldara
+      </a>
      </li>
      <li>
-      Elda Reem Passlands
+      <a href="Elda_Reem_Passlands/Elda_Reem_Passlands.html">
+       Elda Reem Passlands
+      </a>
      </li>
      <li>
-      Gharoni Highlands
+      <a href="Gharoni_Highlands/Gharoni_Highlands.html">
+       Gharoni Highlands
+      </a>
      </li>
      <li>
-      Loch Modar
+      <a href="Loch_Modar/Loch_Modar.html">
+       Loch Modar
+      </a>
      </li>
      <li>
-      Mentassa Plains
+      <a href="Mentassa_Plains/Mentassa_Plains.html">
+       Mentassa Plains
+      </a>
      </li>
      <li>
-      Tinco Merz
+      <a href="Tinco_Merz/Tinco_Merz.html">
+       Tinco Merz
+      </a>
      </li>
      <li>
-      Visterguarde
+      <a href="Visterguarde/Visterguarde.html">
+       Visterguarde
+      </a>
      </li>
      <li>
-      Zenitha
+      <a href="Zenitha/Zenitha.html">
+       Zenitha
+      </a>
      </li>
      <li>
-      Zhu Lang Dynasty
+      <a href="Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
+       Zhu Lang Dynasty
+      </a>
      </li>
     </ul>
    </p>
@@ -336,16 +364,24 @@
    <p>
     <ul>
      <li>
-      Gostee Wilderness
+      <a href="Zhu_Lang_Dynasty/Gostee_Wilderness.html">
+       Gostee Wilderness
+      </a>
      </li>
      <li>
-      Riava Plateau
+      <a href="Alderpine/Riava_Plateau.html">
+       Riava Plateau
+      </a>
      </li>
      <li>
-      Sifariato Mountains
+      <a href="Eldara/Sifariato_Mountains.html">
+       Sifariato Mountains
+      </a>
      </li>
      <li>
-      Talleril
+      <a href="Alderpine/Talleril.html">
+       Talleril
+      </a>
      </li>
     </ul>
    </p>
