--- a/campaign/locations/regions/Matella/Alderpine/Alderpine.html
+++ b/campaign/locations/regions/Matella/Alderpine/Alderpine.html
@@ -400,10 +400,16 @@
    <p>
     <ul>
      <li>
-      Talleril: A small island far off the coast of Alderpine.
+      <a href="Talleril.html">
+       Talleril
+      </a>
+      : A small island far off the coast of Alderpine.
      </li>
      <li>
-      Enthilma: A small island off the coast of Alderpine.
+      <a href="Enthilma.html">
+       Enthilma
+      </a>
+      : A small island off the coast of Alderpine.
      </li>
      <li>
       Lomelindei: The large world tree deep within Alderpine.
