--- a/campaign/locations/regions/Matella/Alderpine/Enthilma.html
+++ b/campaign/locations/regions/Matella/Alderpine/Enthilma.html
@@ -278,7 +278,12 @@
       Moonshadow Falls: Cascading gracefully down a series of moss-covered rocks, Moonshadow Falls is a breathtaking waterfall found in a secluded corner of Enthilma. The falling water creates a shimmering curtain that reflects the moonlight, casting a mesmerizing glow on the surrounding landscape. It is believed to be a place of hidden magic and is said to be visited by the elusive Moonlit Sprites, ethereal creatures said to grant blessings to those who are pure of heart.
      </li>
      <li>
-      Whispering Caverns: Deep beneath Enthilma's surface lie the Whispering Caverns, a network of labyrinthine underground passages. These caverns are known for their extraordinary acoustics, as even the faintest sound reverberates throughout the tunnels, creating an otherworldly symphony of whispers. The Aureldryn elves consider the caverns a place of reflection and introspection, often venturing into their depths for quiet contemplation and to listen to the murmurs of ancient wisdom.
+      <a href="../../../landmarks/Whispering_Caverns.html">
+       Whispering Caverns
+      </a>
+      : Deep beneath Enthilma's surface lie the
+      <a href="../../../landmarks/Whispering_Caverns.html">
+       Whispering Caverns</a>, a network of labyrinthine underground passages. These caverns are known for their extraordinary acoustics, as even the faintest sound reverberates throughout the tunnels, creating an otherworldly symphony of whispers. The Aureldryn elves consider the caverns a place of reflection and introspection, often venturing into their depths for quiet contemplation and to listen to the murmurs of ancient wisdom.
      </li>
      <li>
       Serenity Pond: Serenity Pond is a tranquil and pristine body of water situated at the heart of Enthilma. Surrounded by lush vegetation and ancient trees, it reflects the vivid colors of the sky and the verdant landscape, creating a mesmerizing tapestry of hues. The lake is a place of serenity and healing, where the Aureldryn come to cleanse their spirits and draw strength from the natural energies that flow through its waters.
