--- a/campaign/locations/regions/Matella/Eldara/Sifariato_Mountains.html
+++ b/campaign/locations/regions/Matella/Eldara/Sifariato_Mountains.html
@@ -241,34 +241,64 @@
    <p>
     <ul>
      <li>
-      Dragon's Spine: A towering mountain peak that stretches high into the sky, resembling the spine of a mighty dragon. Legends tell of the presence of ancient dragons slumbering within its depths, guarding hidden treasures and powerful artifacts.
+      <a href="../../../landmarks/Dragon's_Spine.html">
+       Dragon's Spine
+      </a>
+      : A towering mountain peak that stretches high into the sky, resembling the spine of a mighty dragon. Legends tell of the presence of ancient dragons slumbering within its depths, guarding hidden treasures and powerful artifacts.
      </li>
      <li>
-      Whispering Caverns: A network of deep, echoing caverns hidden within the heart of the Sifariato Mountains. The walls of these caverns are said to possess an uncanny ability to carry whispers across vast distances, creating an eerie and mysterious atmosphere.
+      <a href="../../../landmarks/Whispering_Caverns.html">
+       Whispering Caverns
+      </a>
+      : A network of deep, echoing caverns hidden within the heart of the Sifariato Mountains. The walls of these caverns are said to possess an uncanny ability to carry whispers across vast distances, creating an eerie and mysterious atmosphere.
      </li>
      <li>
-      Crystal Falls: A breathtaking waterfall cascading down the mountainside, its waters glistening with a mesmerizing array of colors. The falls are renowned for the presence of rare crystals and gemstones that adorn the surrounding rocks, adding a touch of enchantment to the already stunning natural spectacle.
+      <a href="../../../landmarks/Crystal_Falls.html">
+       Crystal Falls
+      </a>
+      : A breathtaking waterfall cascading down the mountainside, its waters glistening with a mesmerizing array of colors. The falls are renowned for the presence of rare crystals and gemstones that adorn the surrounding rocks, adding a touch of enchantment to the already stunning natural spectacle.
      </li>
      <li>
-      Temple of the Seven Winds: A sacred temple perched precariously on the edge of a cliff, overlooking the vast expanse of the Sifariato Mountains. It is said to be a place of pilgrimage for those seeking enlightenment and spiritual connection with the elemental forces of wind and air.
+      <a href="../../../landmarks/Temple_of_the_Seven_Winds.html">
+       Temple of the Seven Winds
+      </a>
+      : A sacred temple perched precariously on the edge of a cliff, overlooking the vast expanse of the Sifariato Mountains. It is said to be a place of pilgrimage for those seeking enlightenment and spiritual connection with the elemental forces of wind and air.
      </li>
      <li>
-      Enclave of the Silent Monks: A secluded monastery hidden amidst the mist-shrouded peaks. The monks who reside here are known for their mastery of martial arts and their dedication to silence and introspection. Their teachings revolve around discipline, inner harmony, and the exploration of the mind-body connection.
+      <a href="../../../landmarks/Enclave_Of_The_Silent_Monks.html">
+       Enclave Of The Silent Monks
+      </a>
+      : A secluded monastery hidden amidst the mist-shrouded peaks. The monks who reside here are known for their mastery of martial arts and their dedication to silence and introspection. Their teachings revolve around discipline, inner harmony, and the exploration of the mind-body connection.
      </li>
      <li>
-      Lost City of Azurith: A fabled ancient city that lies in ruins deep within the Sifariato Mountains. Its crumbling stone structures and overgrown courtyards hint at a bygone era of great civilization and prosperity. Explorers and treasure hunters are drawn to its mysteries, hoping to uncover forgotten knowledge and treasures.
+      <a href="../../../landmarks/Lost_City_Of_Azurith.html">
+       Lost City Of Azurith
+      </a>
+      : A fabled ancient city that lies in ruins deep within the Sifariato Mountains. Its crumbling stone structures and overgrown courtyards hint at a bygone era of great civilization and prosperity. Explorers and treasure hunters are drawn to its mysteries, hoping to uncover forgotten knowledge and treasures.
      </li>
      <li>
-      Echoing Peaks: A series of towering peaks that create a natural amphitheater, amplifying sounds in a mesmerizing way. A simple whisper can resonate throughout the entire area, creating a unique acoustic experience and captivating all who visit.
+      <a href="../../../landmarks/Echoing_Peaks.html">
+       Echoing Peaks
+      </a>
+      : A series of towering peaks that create a natural amphitheater, amplifying sounds in a mesmerizing way. A simple whisper can resonate throughout the entire area, creating a unique acoustic experience and captivating all who visit.
      </li>
      <li>
-      Guardian's Watchtower: A sentinel-like tower perched atop a sheer cliff, offering a commanding view of the surrounding mountains. It is said to have been built by an ancient civilization as a defensive outpost against mythical creatures and invading forces. The tower stands as a testament to their engineering prowess and strategic foresight.
+      <a href="../../../landmarks/Guardian's_Watchtower.html">
+       Guardian's Watchtower
+      </a>
+      : A sentinel-like tower perched atop a sheer cliff, offering a commanding view of the surrounding mountains. It is said to have been built by an ancient civilization as a defensive outpost against mythical creatures and invading forces. The tower stands as a testament to their engineering prowess and strategic foresight.
      </li>
      <li>
-      Serpent's Pass: A treacherous mountain trail that winds through narrow canyons and precipitous cliffs. The pass is known for its stunning views and the presence of carved stone serpents lining the path, acting as both guardians and markers for weary travelers.
+      <a href="../../../landmarks/Serpent's_Pass.html">
+       Serpent's Pass
+      </a>
+      : A treacherous mountain trail that winds through narrow canyons and precipitous cliffs. The pass is known for its stunning views and the presence of carved stone serpents lining the path, acting as both guardians and markers for weary travelers.
      </li>
      <li>
-      Veil of Whispers: A mystical veil of mist that envelops a hidden valley deep within the Sifariato Mountains. Legends speak of ethereal voices that can be heard within the mist, guiding those who enter with ancient wisdom and warnings. Only the most intrepid explorers dare to venture through the veil in search of its secrets.
+      <a href="../../../landmarks/Veil_Of_Whispers.html">
+       Veil Of Whispers
+      </a>
+      : A mystical veil of mist that envelops a hidden valley deep within the Sifariato Mountains. Legends speak of ethereal voices that can be heard within the mist, guiding those who enter with ancient wisdom and warnings. Only the most intrepid explorers dare to venture through the veil in search of its secrets.
      </li>
     </ul>
    </p>
